[package]
name = "rustylight"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = {version = "4.5.9", features = ["derive"]}
dotenvy = "0.15.7"
opencv = "0.92.0"
smart-leds = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
highgui = []

[profile.release]
opt-level = 3
