[package]
name = "rustylight"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0.86"

# Cli and config
toml = "0.8.14"
config = "0.14.0"

# Logging/tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Serde
serde = "1.0.204"
serde_derive = "1.0.204"

# LEDs
smart-leds = "0.3.0"
rs_ws281x = "0.5.1"

# Get video stream
v4l = "0.14.0"

[features]
highgui = []

[profile.release]
opt-level = 3
